// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusIndicator /> should render a dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    color="rgb(192, 48, 0)"
    type="circle"
  />
  Test
</span>
`;

exports[`<StatusIndicator /> should render a dot status label with default values 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    type="circle"
  />
  Test
</span>
`;

exports[`<StatusIndicator /> should render a hollow dot status label 1`] = `
<span
  className="StatusIndicator dot-status-label"
>
  <FontAwesomeIcon
    type="circle-o"
  />
  Test
</span>
`;
